@@ -1,3 +1,8 @@
+2009-04-11  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/39692
+	* gfortran.dg/proc_ptr_14.f90: New.
+
 2009-04-11  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/39732
